<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">

    <Button
            android:id="@+id/c1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c1"
    />
    <Button
            android:id="@+id/d1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d1"
    />
    <Button
            android:id="@+id/e1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e1"
    />
    <Button
            android:id="@+id/f1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/f1"
    />
    <Button
            android:id="@+id/g1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/g1"
    />
    <Button
            android:id="@+id/a2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a2"
    />
    <Button
            android:id="@+id/b2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b2"
    />
        </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
                android:id="@+id/c2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c2"
        />
        <Button
                android:id="@+id/d2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d2"
        />
        <Button
                android:id="@+id/e2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/e2"
        />
        <Button
                android:id="@+id/f2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/f2"
        />
        <Button
                android:id="@+id/g2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/g2"
        />
        <Button
                android:id="@+id/a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a3"
        />
        <Button
                android:id="@+id/b3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b3"
        />
        <Button
                android:id="@+id/c3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b3"
        />
    </LinearLayout>
</LinearLayout>